<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrierHeader"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/personal_preferences_title"
        android:textColor="@color/colorTextInverted"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/personal_preferences_subtitle"
        android:textColor="@color/colorTextInverted"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvTitle, tvSubtitle"
        app:barrierDirection="bottom"
        app:barrierMargin="26dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/personal_preferences_hint"
        android:textColor="@color/colorTextPrimary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/barrierHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_preference_tag"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFinish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="18dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="24dp"
        android:gravity="center"
        android:background="@drawable/bg_rounded_8dp"
        android:backgroundTint="@color/bg_button_selector"
        android:fontFamily="@font/zonapro_extrabold"
        android:text="@string/finish_label"
        android:textColor="@color/colorTextInverted"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>