<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivThumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrierContent"
        tools:background="@color/colorGray"/>

    <View
        android:id="@+id/barrierContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/firstIndicator"
        android:layout_width="64dp"
        android:layout_height="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_rounded_8dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/barrierContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/secondIndicator"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <View
        android:id="@+id/secondIndicator"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_rounded_8dp"
        android:backgroundTint="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@id/barrierContent"
        app:layout_constraintStart_toEndOf="@id/firstIndicator"
        app:layout_constraintEnd_toStartOf="@id/thirdIndicator"/>

    <View
        android:id="@+id/thirdIndicator"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_rounded_8dp"
        android:backgroundTint="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@id/barrierContent"
        app:layout_constraintStart_toEndOf="@id/secondIndicator"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstIndicator"
        tools:text="@string/onboarding_title_first"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_light"
        android:textColor="@color/colorTextPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="@string/onboarding_subtitle_first"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="tvSkip, tvNext" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/skip_label"
        android:textColor="@color/colorTextPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvNext"
        app:layout_constraintBottom_toBottomOf="@id/tvNext"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="18dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/bg_rounded_8dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/zonapro_extrabold"
        android:text="@string/continue_label"
        android:textColor="@color/colorTextInverted"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFinish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="18dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="24dp"
        android:gravity="center"
        android:background="@drawable/bg_rounded_8dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/zonapro_extrabold"
        android:text="@string/lets_go_label"
        android:textColor="@color/colorTextInverted"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>